include_directories(${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")

add_subdirectory(tests)
add_subdirectory(examples)

include(CTest)
add_test(NAME BNLeftRotate COMMAND bn_left_rotate_ut)
add_test(NAME RBInsertDelete COMMAND rb_insert_delete_ut)
add_test(NAME BNMost COMMAND bn_most_ut)
add_test(NAME BNTransplant COMMAND bn_transplant_ut)
add_test(NAME BNSSearch COMMAND bns_search_ut)
add_test(NAME BNSSuccessorPredecessor COMMAND bns_suc_pred_ut)
add_test(NAME BNForeach COMMAND bn_foreach_ut)
add_test(NAME S2I COMMAND s2i_ut)
add_test(NAME S2I2 COMMAND s2i_ut2)
add_test(NAME GtvSizeCapGrow COMMAND gtv_size_cap_grow_ut)
add_test(NAME GtvPushBack COMMAND gtv_push_back_ut)
add_test(NAME SVecPushBack COMMAND svec_push_back_ut)
add_test(NAME List1 COMMAND list1_ut)
add_test(NAME ValList1 COMMAND gt_list1_ut)
add_test(NAME IVecPushBack COMMAND ivec_push_back_ut)
add_test(NAME IQueue COMMAND iqueue_ut)
add_test(NAME IStack COMMAND istack_ut)
add_test(NAME GTP2WHeap COMMAND gtp2wheap_ut)
add_test(NAME D2WHeap COMMAND d2wheap_ut)
add_test(NAME TreeMap COMMAND treemap_ut)