include_directories(${CMAKE_CURRENT_LIST_DIR}/base)

add_subdirectory(base)
add_subdirectory(cvector)
add_subdirectory(cgraph_ivec)
add_subdirectory(structure_generators)
add_subdirectory(type_indexededgelist)
add_subdirectory(visitors)
add_subdirectory(cgraph_iqueue)
add_subdirectory(structural_properties)
add_subdirectory(cgraph_istack)