add_executable(cgraph_ivec_max_ut test_cgraph_ivec_max.c ../../cgraph_vector.c)
add_executable(cgraph_ivec_isininterval_ut test_cgraph_ivec_isininterval.c ../../cgraph_vector.c)
add_executable(cgraph_ivec_grow_and_setsize_ut test_cgraph_ivec_grow_and_setsize.c ../../cgraph_vector.c)
add_executable(cgraph_ivec_order_ut test_cgraph_ivec_order.c ../../cgraph_vector.c)